--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,28 @@ html, body{
   padding: 0;
   width: 100%;
   height: 100%;
+
+  --bar-height: 40px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+#bar {
+  width: 100%;
+  height: var(--bar-height);
+  background-color: white;
+}
+
+#bar > input {
+  margin: 5px 5%;
+  width: 90%;
+  height: calc(100% - 5px * 2);
+  border-radius: calc(var(--bar-height) / 2);
 }
 
 webview {
   width: 100%;
-  height: 100%;
+  height: calc(100% - var(--bar-height));
 }
